fixed overflow chat issue

--- a/learnlink-ui/src/pages/messaging.css
+++ b/learnlink-ui/src/pages/messaging.css
@@ -2,16 +2,11 @@
 .Messaging {
   display: flex;
   flex-direction: column;
-  height: 100vh;
   background-color: #fff;
+  overflow-y: scroll;
+  height: 100vh;
 }
 
-.chat {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  max-width: 100%;
-}
 
 .content {
   flex-direction: column;
@@ -21,7 +16,7 @@
 
 .Chat {
   display: flex;
-  flex:1;
+  max-height: calc(100vh - 50px - 86px); /* Header + Input */
 }
 
 .ChatOptions {
@@ -72,6 +67,10 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  height: 100%; /* Change from auto to 100% */
+  box-sizing: border-box;
+  overflow: hidden; /* Prevents overflow */
+
 }
 
 .ChatHeader {
@@ -117,7 +116,6 @@
   width: 100%;
   margin: 0 auto;
   padding: 10px;
-  /* background-color: #f9f9f9; */
   overflow-y: scroll;
   box-sizing: border-box;
 
@@ -320,7 +318,6 @@
 }
 
 .ChatList {
-  max-height: 500px; /* Adjust height as needed */
   overflow-y: auto; /* Enables vertical scrolling */
   /* padding-right: 10px; Optional: prevent scrollbar from overlapping content */
 }
@@ -394,12 +391,12 @@
 }
 
 .MessagesSidebar {
-  overflow-y: auto; /* Allows smooth scrolling */
-  max-height: 80vh; /* Prevents it from taking up the entire screen */
+  overflow-y: scroll; /* Allows smooth scrolling */
   width: 24vw;
   border-right: 1px solid #ccc; /* Optional: Adds a subtle border */
   background-color: #f9f9f9; /* Light background for better readability */
   min-width: fit-content;
+  height:100%;
 }
 
 
@@ -418,6 +415,8 @@
   flex-direction: column;
   align-items: flex-start;
   margin-bottom: 10px;
+  box-sizing: border-box;
+
 }
 
 .MyMessage {
@@ -467,8 +466,4 @@
   color: #888;
   padding: 20px;
 }
-
-
-
-
 
